add swagger docs for API2
